@@ -1,4 +1,5 @@
 0.2.0
+Added use end caps ( optional ) when setting BG image.
 Better display of transparent BG image.
 Added optional background image to dock.
 Fixed finding desktop files.
